--- a/assets/pug/components/_navbar.pug
+++ b/assets/pug/components/_navbar.pug
@@ -2,8 +2,10 @@ nav.navbar.navbar-expand-lg.navbar-dark
   .container
     a.navbar-brand.navbar-brand-spin(href="../home.htm")
       img(src="../static/images/logo.png", alt="logo", width="50")
-    button.navbar-toggler(type="button", data-bs-toggle="collapse", data-bs-target="#navbarNav", aria-controls="navbarNav", aria-expanded="false", aria-label="Toggle navigation")
-      span.navbar-toggler-icon
+    button.navbar-toggler.d-lg-none(type="button", data-bs-toggle="collapse", data-bs-target="#navbarNav", aria-controls="navbarNav", aria-expanded="false", aria-label="Toggle navigation")
+      span
+      span
+      span
     .collapse.navbar-collapse#navbarNav
       ul.navbar-nav
         li.nav-item
