--- a/assets/pug/pages/home.pug
+++ b/assets/pug/pages/home.pug
@@ -10,17 +10,17 @@ html(lang="en")
     //- LANDING -//
     section.landing
       .wallpapers
-        img.wallpaper-img.active(src="../static/images/landing-wallpaper1.png")
-        img.wallpaper-img(src="../static/images/landing-wallpaper2.png")
-        img.wallpaper-img(src="../static/images/landing-wallpaper3.png")
-        img.wallpaper-img(src="../static/images/landing-wallpaper4.png")
+        img.wallpaper-img.active(src="../static/images/landing-wallpaper1.png", loading= "eager")
+        img.wallpaper-img(src="../static/images/landing-wallpaper2.png", loading= "eager")
+        img.wallpaper-img(src="../static/images/landing-wallpaper3.png", loading= "eager")
+        img.wallpaper-img(src="../static/images/landing-wallpaper4.png", loading= "eager")
       .overlay
       .container.d-flex.justify-content-center.align-items-center(style="height: 100vh")
         .content.d-flex.flex-column.w-100
           .logo.text-center.mb-4
             img.main-logo-spin(src="../static/images/logo.png", alt="logo", width="150px")
           .buttons.d-flex.gap-3.flex-wrap.m-auto.justify-content-center
-            a.btn.btn-primary.btn-lg.fs-5.d-flex.align-items-center.justify-content-center(href="https://discord.gg/spl-league-s3-1257473566325084310", target="_blank", style="background-color: #5764f1")
+            a.btn.btn-primary.btn-lg.fs-5.d-flex.align-items-center.justify-content-center(href="https://discord.gg/spl-league-s3-1257473566325084310", target="_blank", style="background-color: #6e57f1")
               i.bi.bi-discord.pe-3
               | Discord
               i.bi.bi-box-arrow-up-right.ps-3
