--- a/assets/pug/pages/top-players.pug
+++ b/assets/pug/pages/top-players.pug
@@ -10,10 +10,10 @@ html(lang="en")
     //- LANDING -//
     section.landing
       .wallpapers
-        img.wallpaper-img.active(src="../static/images/landing-wallpaper1.png")
-        img.wallpaper-img(src="../static/images/landing-wallpaper2.png")
-        img.wallpaper-img(src="../static/images/landing-wallpaper3.png")
-        img.wallpaper-img(src="../static/images/landing-wallpaper4.png")
+        img.wallpaper-img.active(src="../static/images/landing-wallpaper1.png", loading="eager")
+        img.wallpaper-img(src="../static/images/landing-wallpaper2.png", loading="eager")
+        img.wallpaper-img(src="../static/images/landing-wallpaper3.png", loading="eager")
+        img.wallpaper-img(src="../static/images/landing-wallpaper4.png", loading="eager")
       .overlay
       .container.d-flex.justify-content-center.align-items-center(style="height: 100vh")
         .content.d-flex.flex-column.w-100
