--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -22,6 +22,7 @@ body {
 
 .btn {
   transition: 0.3s;
+
   &:hover {
     transform: scale(1.1);
   }
@@ -32,8 +33,10 @@ body {
   top: 0;
   width: 100%;
   z-index: 10;
+
   .container {
     position: relative;
+
     &::before {
       content: '';
       width: 90%;
@@ -45,6 +48,43 @@ body {
       left: 50%;
       transform: translateX(-50%);
     }
+
+    .navbar-toggler {
+      width: 50px;
+      height: 40px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      padding: 10px;
+      border: none;
+      background: transparent;
+
+      &:focus {
+        box-shadow: none;
+      }
+
+      span {
+        display: block;
+        width: 100%;
+        height: 2px;
+        background-color: white;
+        transition: 0.3s ease-in-out;
+      }
+
+      &.open {
+        span:nth-child(1) {
+          transform: translateY(8px) rotate(45deg);
+        }
+
+        span:nth-child(2) {
+          opacity: 0;
+        }
+
+        span:nth-child(3) {
+          transform: translateY(-10px) rotate(-45deg);
+        }
+      }
+    }
   }
 }
 
@@ -53,6 +93,7 @@ body {
   width: 100%;
   height: 100vh;
   overflow: hidden;
+
   .wallpaper-img {
     position: absolute;
     top: 0;
@@ -63,11 +104,14 @@ body {
     opacity: 0;
     transition: opacity 1s ease-in-out;
     z-index: 0;
+    transform: scale(1.1);
+    
     &.active {
       opacity: 1;
       z-index: 1;
     }
   }
+
   .overlay {
     position: absolute;
     width: 100%;
@@ -75,6 +119,7 @@ body {
     z-index: 2;
     background-color: rgba(0, 0, 0, 0.4);
   }
+
   .content {
     position: relative;
     z-index: 3;
