--- a/public/assets/pug/components/_navbar.pug
+++ b/public/assets/pug/components/_navbar.pug
@@ -1,7 +1,7 @@
 nav.navbar.navbar-expand-lg.navbar-dark
   .container
-    a.navbar-brand.navbar-brand-spin(href="../home.htm")
-      img(src="../static/images/logo.png", alt="logo", width="50")
+    a.navbar-brand.navbar-brand-spin(href="index.htm")
+      img(src="assets/images/logo.png", alt="logo", width="50")
     button.navbar-toggler.d-lg-none(type="button", data-bs-toggle="collapse", data-bs-target="#navbarNav", aria-controls="navbarNav", aria-expanded="false", aria-label="Toggle navigation")
       span
       span
@@ -9,6 +9,6 @@ nav.navbar.navbar-expand-lg.navbar-dark
     .collapse.navbar-collapse#navbarNav
       ul.navbar-nav
         li.nav-item
-          a.nav-link.active(href="home.htm", aria-current="page") Home
+          a.nav-link.active(href="index.htm", aria-current="page") Home
         li.nav-item
           a.nav-link(href="top-players.htm") Top players
