--- a/public/assets/pug/pages/404.pug
+++ b/public/assets/pug/pages/404.pug
@@ -13,7 +13,7 @@ html(lang="en")
             img(src="assets/images/logo.png", alt="logo", width="150px")
           h1.text-light.text-center.mb-5 Error 404 Page Not Found.
           .buttons.d-flex.gap-3.flex-wrap.m-auto.justify-content-center
-            a.btn.btn-primary.btn-lg.fs-5.d-flex.align-items-center.justify-content-center(href="index.htm")
+            a.btn.btn-primary.btn-lg.fs-5.d-flex.align-items-center.justify-content-center(href="index.html")
               i.bi.bi-house-door-fill.pe-3
               | Go Back Home
               i.bi.bi-arrow-90deg-left.ps-3
