--- a/public/assets/pug/pages/home.pug
+++ b/public/assets/pug/pages/home.pug
@@ -20,7 +20,7 @@ html(lang="en")
           .logo.text-center.mb-4
             img.main-logo-spin(src="assets/images/logo.png", alt="logo", width="150px")
           .buttons.d-flex.gap-3.flex-wrap.m-auto.justify-content-center
-            a.btn.btn-primary.btn-lg.fs-5.d-flex.align-items-center.justify-content-center(href="https://discord.gg/spl-league-s3-1257473566325084310", target="_blank", style="background-color: #6e57f1")
+            a.btn.btn-primary.btn-lg.fs-5.d-flex.align-items-center.justify-content-center(href="https://discord.gg/55YqBbkMbZ", target="_blank", style="background-color: #6e57f1")
               i.bi.bi-discord.pe-3
               | Discord
               i.bi.bi-box-arrow-up-right.ps-3
