--- a/assets/pug/pages/index.pug
+++ b/assets/pug/pages/index.pug
@@ -3,6 +3,8 @@ html(lang="en")
   head
     include ../meta-data/_head.pug
     title SPL | Home
+    //- custom CSS
+    link(rel="stylesheet", href="assets/css/index.min.css")
   body
     //- NAVBAR -//
     include ../components/_navbar.pug
