--- a/assets/pug/404.pug
+++ b/assets/pug/404.pug
@@ -1,21 +1,20 @@
 doctype html
 html(lang="en")
   head
-    include ../meta-data/_head.pug
+    include meta-data/_head.pug
     title SPL | 404 Page Not Found
-  body
+  body(data-bs-theme="dark")
     //- LANDING -//
     section.landing
-      .overlay
       .container.d-flex.justify-content-center.align-items-center(style="height: 100vh")
         .content.d-flex.flex-column.w-100
           .logo.text-center.mb-4
             img(src="assets/images/logo.png", alt="logo", width="150px")
-          h1.text-light.text-center.mb-5 Error 404 Page Not Found.
+          h1.text-center.mb-5 Error 404 Page Not Found.
           .buttons.d-flex.gap-3.flex-wrap.m-auto.justify-content-center
             a.btn.btn-primary.btn-lg.fs-5.d-flex.align-items-center.justify-content-center(href="index.html")
               i.bi.bi-house-door-fill.pe-3
               | Go Back Home
               i.bi.bi-arrow-90deg-left.ps-3
 
-    script(src="assets/js/main.js", type="module")
+    script(src="assets/js/main.min.js", type="module")
