--- a/assets/pug/components/_navbar.pug
+++ b/assets/pug/components/_navbar.pug
@@ -1,4 +1,4 @@
-nav.navbar.navbar-expand-lg.navbar-dark
+nav.navbar.navbar-expand-lg
   .container
     a.navbar-brand.navbar-brand-spin(href="index.html")
       img(src="assets/images/logo.png", alt="logo", width="50")
@@ -11,4 +11,6 @@ nav.navbar.navbar-expand-lg.navbar-dark
         li.nav-item
           a.nav-link.active(href="index.html", aria-current="page") Home
         li.nav-item
-          a.nav-link(href="top-players.html") Top players
+          a.nav-link(href="top-players.html") Top Players
+        li.nav-item
+          a.nav-link(href="rule-book.html") Rule Book
