--- a/assets/pug/top-players.pug
+++ b/assets/pug/top-players.pug
@@ -1,13 +1,13 @@
 doctype html
 html(lang="en")
   head
-    include ../meta-data/_head.pug
+    include meta-data/_head.pug
     title SPL | Top Players
     //- custom CSS
     link(rel="stylesheet", href="assets/css/top-players.min.css")
-  body
+  body(data-bs-theme="dark")
     //- NAVBAR -//
-    include ../components/_navbar.pug
+    include components/_navbar.pug
 
     //- TOP PLAYERS -//
     section#top-players.container
@@ -18,5 +18,5 @@ html(lang="en")
     //- papa parse
     script(src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js")
     //- custom JS 
-    script(src="assets/js/main.js", type="module") 
-    script(src="assets/js/top-players.js") 
+    script(src="assets/js/main.min.js", type="module") 
+    script(src="assets/js/top-players.min.js") 
