--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,6 +1,3 @@
-@use 'animations/animations';
-@use 'scrollbar';
-
 body {
   background-color: #212529;
   min-height: 100vh;
@@ -77,5 +74,70 @@ body {
         }
       }
     }
+  }
+}
+
+//! SCROLL BAR //
+html {
+  scroll-behavior: smooth;
+}
+
+// FOR WEBKIT //
+/* Width of the scrollbar */
+::-webkit-scrollbar {
+  $thickness: 8px;
+  width: $thickness;
+  height: $thickness; /* for horizontal scrollbar */
+}
+
+/* Track (background) */
+::-webkit-scrollbar-track {
+  background: black;
+}
+
+/* Thumb (draggable handle) */
+::-webkit-scrollbar-thumb {
+  background: #0d6efd;
+  border-radius: 100px;
+}
+
+/* Hover state */
+::-webkit-scrollbar-thumb:hover {
+  background: #094fb9;
+}
+
+::-webkit-scrollbar-corner {
+  background: #f0f0f0;
+}
+
+::-webkit-scrollbar-button {
+  display: none; /* Hides the arrow buttons */
+}
+
+// FOR FIREFOX //
+body {
+  scrollbar-width: thin;
+  scrollbar-color: #888 #f0f0f0;
+}
+
+//! ANIMATIONS //
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.main-logo-spin {
+  animation: spin 20s linear infinite;
+}
+
+.navbar-brand-spin {
+  animation: spin 10s linear infinite;
+  animation-play-state: paused;
+  &:hover {
+    animation-play-state: running;
   }
 }
