--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -17,7 +17,6 @@
     left: 0;
     width: 100%;
     height: 100%;
-    object-fit: cover;
     opacity: 0;
     transition: opacity 1s ease-in-out;
     z-index: 0;
@@ -26,6 +25,13 @@
     &.active {
       opacity: 1;
       z-index: 1;
+    }
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      display: block;
     }
   }
 
