added the discord AOth

--- a/assets/pug/404.pug
+++ b/assets/pug/404.pug
@@ -16,5 +16,7 @@ html(lang="en")
               i.bi.bi-house-door-fill.pe-3
               | Go Back Home
               i.bi.bi-arrow-90deg-left.ps-3
-
+    //- axios
+    script(src="https://cdn.jsdelivr.net/npm/axios@1.6.8/dist/axios.min.js")
+    //- main js file
     script(src="assets/js/main.min.js", type="module")
