--- a/assets/pug/index.pug
+++ b/assets/pug/index.pug
@@ -40,6 +40,9 @@ html(lang="en")
               | SPL Hub
               i.bi.bi-box-arrow-up-right.ps-3
 
+    //- axios
+    script(src="https://cdn.jsdelivr.net/npm/axios@1.6.8/dist/axios.min.js")
+    //- main js file
+    script(src="assets/js/main.min.js", type="module")
     //- custom JS
     script(src="assets/js/index.min.js", type="module")
-    script(src="assets/js/main.min.js", type="module")
