--- a/assets/pug/rule-book.pug
+++ b/assets/pug/rule-book.pug
@@ -3,8 +3,6 @@ html(lang="en")
   head
     include meta-data/_head.pug
     title SPL | Rule Book
-    //- custom CSS
-    link(rel="stylesheet", href="assets/css/rule-book.min.css")
   body(data-bs-theme="dark")
     //- NAVBAR -//
     include components/_navbar.pug
@@ -16,21 +14,11 @@ html(lang="en")
         //- will be populated with js
       nav
         ul.pagination.justify-content-center
-          //- li.page-item
-          //-   a.page-link(href="#" aria-label="Previous")
-          //-     span(aria-hidden="true") &laquo;
-          //- li.page-item.active
-          //-   a.page-link(href="#") 1
-          //- li.page-item
-          //-   a.page-link(href="#") 2
-          //- li.page-item
-          //-   a.page-link(href="#") 3
-          //- li.page-item
-          //-   a.page-link(href="#" aria-label="Next")
-          //-     span(aria-hidden="true") &raquo;
+          //- will be populated with js
 
     //- axios
     script(src="https://cdn.jsdelivr.net/npm/axios@1.6.8/dist/axios.min.js")
-    //- our custom JS
+    //- main js file
     script(src="assets/js/main.min.js", type="module")
+    //- our custom JS
     script(src="assets/js/rule-book.min.js", type="module")
