--- a/assets/pug/top-players.pug
+++ b/assets/pug/top-players.pug
@@ -3,11 +3,35 @@ html(lang="en")
   head
     include meta-data/_head.pug
     title SPL | Top Players
-    //- custom CSS
-    link(rel="stylesheet", href="assets/css/top-players.min.css")
   body(data-bs-theme="dark")
     //- NAVBAR -//
     include components/_navbar.pug
+
+    //- MODALS -//
+    .modal.fade#addResultModal(tabindex='-1', aria-labelledby='addResultModalLabel', aria-hidden='true')
+      .modal-dialog.modal-dialog-centered
+        .modal-content
+          .modal-header
+            h1.modal-title.fs-5#addResultModalLabel Add New Result
+            button.btn-close(type='button', data-bs-dismiss='modal', aria-label='Close')
+          .modal-body
+            form
+              .mb-3
+                label.col-form-label(for='recipient-name') Recipient:
+                input#recipient-name.form-control(type='text')
+              .mb-3
+                label.col-form-label(for='message-text') Message:
+                textarea#message-text.form-control
+          .modal-footer
+            button.btn.btn-secondary(type='button', data-bs-dismiss='modal') Close
+            button.btn.btn-primary(type='button') Send message
+
+
+    //- ADD MATCH RESULTS -//
+    .container
+      a.btn.btn-outline-info.d-block.ms-auto.me-5.mt-4#add-result-btn(style="width: fit-content", data-bs-toggle="modal", data-bs-target="#addResultModal", type="button")
+        i.bi.bi-plus-lg.pe-2
+        | Add New Result
 
     //- TOP PLAYERS -//
     section#top-players.container
@@ -17,6 +41,7 @@ html(lang="en")
     script(src="https://cdn.jsdelivr.net/npm/axios@1.6.8/dist/axios.min.js")
     //- papa parse
     script(src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js")
-    //- custom JS 
-    script(src="assets/js/main.min.js", type="module") 
+    //- main js file
+    script(src="assets/js/main.min.js", type="module")
+    //- custom JS
     script(src="assets/js/top-players.min.js") 
