--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -27,7 +27,7 @@ body {
     position: relative;
 
     &::before {
-      content: '';
+      content: "";
       width: 90%;
       height: 1px;
       background-color: rgba(255, 255, 255, 0.5);
