--- a/client/src/pug/404.pug
+++ b/client/src/pug/404.pug
@@ -9,7 +9,7 @@ html(lang="en")
       .container.d-flex.justify-content-center.align-items-center(style="height: 100vh")
         .content.d-flex.flex-column.w-100
           .logo.text-center.mb-4
-            img(src="assets/images/logo.png", alt="logo", width="150px")
+            img(src="https://spl-league.web.app/assets/images/logo.png", alt="logo", width="150px")
           h1.text-center.mb-5 Error 404 Page Not Found.
           .buttons.d-flex.gap-3.flex-wrap.m-auto.justify-content-center
             a.btn.btn-primary.btn-lg.fs-5.d-flex.align-items-center.justify-content-center(href="index.html")
