--- a/client/src/pug/components/_navbar.pug
+++ b/client/src/pug/components/_navbar.pug
@@ -19,7 +19,7 @@ nav.navbar.navbar-expand-lg
           a.btn.btn-outline-light#login-btn
             i.bi.bi-discord.pe-3
             | Sign in
-        li.nav-item
+        li.d-none.nav-item
           a.btn.btn-outline-danger#logout-btn
             i.bi.bi-box-arrow-in-right.pe-3
             | Log out
