testing the back-end

--- a/client/src/pug/top-players.pug
+++ b/client/src/pug/top-players.pug
@@ -49,7 +49,7 @@ html(lang="en")
 
     //- ADD MATCH RESULTS -//
     .container
-      a.d-none.btn.btn-outline-info.d-block.ms-auto.me-5.mt-4#add-result-btn(style="width: fit-content", data-bs-toggle="modal", data-bs-target="#add-result-modal", type="button")
+      a.btn.btn-outline-info.d-block.ms-auto.me-5.mt-4#add-result-btn(style="width: fit-content", data-bs-toggle="modal", data-bs-target="#add-result-modal", type="button")
         i.bi.bi-plus-lg.pe-2
         | Add New Result
 
@@ -61,8 +61,6 @@ html(lang="en")
     script(src="https://cdn.jsdelivr.net/npm/markdown-it/dist/markdown-it.min.js")
     //- axios
     script(src="https://cdn.jsdelivr.net/npm/axios@1.6.8/dist/axios.min.js")
-    //- papa parse
-    script(src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js")
     //- main js file
     script(src="assets/js/main.min.js", type="module")
     //- custom JS
