--- a/client/src/pug/components/_navbar.pug
+++ b/client/src/pug/components/_navbar.pug
@@ -12,7 +12,7 @@ nav.navbar.navbar-expand-lg
           a.nav-link.active(href="index.html", aria-current="page") Home
         li.nav-item
           a.nav-link(href="top-players.html") Top Players
-        li.nav-item
+        li.nav-item.d-none
           a.nav-link(href="rule-book.html") Rule Book
       ul.navbar-nav
         li.d-none.nav-item
