--- a/client/src/pug/rule-book.pug
+++ b/client/src/pug/rule-book.pug
@@ -12,7 +12,7 @@ html(lang="en")
       h1.text-center SPL Rule Book for matches and refs
       ol#rules-wrapper.list-group.list-group-flush
         //- will be populated with js
-      nav
+      nav.mb-4
         ul.pagination.justify-content-center
           //- will be populated with js
 
